--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="bottom-header">
 					<!-- copyright -->
 					<div class="copyrights text-center">
-						<p>2021 © - Made with ❤ by <a href="https://daneric.dev/" target="_blank">Daneric</a> </p>
+						<p>❤ 2021 © - Made with ❤ by <a href="https://daneric.dev/" target="_blank">Daneric ❤</a> </p>
 					</div>
 				</div>
 			</div>
